# interactive_scrapper

./: Cargo.toml  README.md
src/: app_events.rs  gadget_selector.rs  lib.rs  listener.rs  main.rs
