[package]
name = "interactive_scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
fantoccini = "0.18"
rdev = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
